// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TaskDetails - Reducer should handle FOREMAN_TASK_DETAILS_SUCCESS 1`] = `
Object {
  "isData": true,
}
`;

exports[`TaskDetails - Reducer should return the initial state 1`] = `
Object {
  "isData": false,
}
`;
